fix: Add missing border style for invalid file input

--- a/packages/core/src/components/file-input/file-input.scss
+++ b/packages/core/src/components/file-input/file-input.scss
@@ -15,6 +15,10 @@
   line-height: 24px;
   font-weight: 300;
 
+  &.invalid {
+    border-color: colours.$colour-utility-error;
+  }
+
   &.drop_zone {
     // active when file is dragged over label
     background: #fff !important;
